# VisaMultiAgentSystem

./: .gitignore  README.md  adk_agent.py  main.py  mcp_server.py  package-lock.json  package.json  pyproject.toml
3.30_country_agent/agents/: pyproject.toml
3.30_country_agent/agents/manager/: agent.py
3.30_country_agent/books_server/: pyproject.toml  server.py
3.30_country_agent/country_server/: pyproject.toml  server.py
SemesterProject_VisaRanker/visa_ranker/: agent.py
migration_engine/: config.py  main.py  requirements.txt
migration_engine/agents/: affordability_agent.py  base_agent.py  english_agent.py  job_market_agent.py  visa_agent.py
migration_engine/evaluation/: results.md  run_evaluation.py
migration_engine/infra/: cache.py  db.py  logger.py
migration_engine/orchestrator/: conflict_resolver.py  explainer.py  merger.py  orchestrator.py
migration_engine/ranker/: ranker.py
migration_engine/reports/: report_generator.py
migration_engine/results/: 2026-04-27_demo_status.md  2026-04-27_software_engineer_full_ranking.md  sample_output_portugal.json
migration_engine/results/presentation/: architecture.dot  demo_run.sh  demo_script.md  preflight_checklist.md  recording_script_10min.md  recording_script_10min_no_chatbot.md  render_architecture.py  slides.md
migration_engine/schema/: models.py
tests/: test_smoke.py
